--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<title>Redbud</title>
+    	<meta name="description" content="The go-to way of command, entity, item, and tile creation for swagengine.">
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
