--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
     %sveltekit.head%
     <script>
   	  (function() {
-        const LOCAL_STORAGE_KEY_PREFERENCES = 'user_preferences';
+        const LOCAL_STORAGE_KEY_PREFERENCES = 'swaggappAutosavePreferences';
         
         let initialTheme = 'sunset';
         let initialColoredElementCards = true;
@@ -64,7 +64,7 @@
           document.documentElement.classList.remove('dark');
         }
       })();
-  </script>
+    </script>
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
