Fixed colored card backgrounds flickering on reload

--- a/src/app.html
+++ b/src/app.html
@@ -43,10 +43,10 @@
         document.documentElement.setAttribute('data-theme', initialTheme);
 
         if (initialColoredElementCards) {
-          document.documentElement.classList.add('colored-cards-enabled');
+          document.documentElement.classList.add('colored-cards');
           document.documentElement.classList.remove('grayscale-cards');
         } else {
-          document.documentElement.classList.remove('colored-cards-enabled');
+          document.documentElement.classList.remove('colored-cards');
           document.documentElement.classList.add('grayscale-cards');
         }
 
