Changed elements to loadedElements in the engineStore type & lowered favicon size

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
     <title>Redbud</title>
     <meta name="description" content="The go-to way of command, entity, item, and tile creation for swagengine.">
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
     <script>
