Changed all console logs to console debug instead, and some other logging changes

--- a/src/app.html
+++ b/src/app.html
@@ -38,7 +38,7 @@
             initialShowGradient = loadedPreferences.showGradient !== undefined ? loadedPreferences.showGradient : initialShowGradient;
           }
         } catch (e) {
-          console.error("Error loading preferences from localStorage:", e);
+          console.error("[redbud] (app.html) Error loading preferences from localStorage:", e);
         }
 
         document.documentElement.setAttribute('data-theme', initialTheme);
